k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameday-workflow-frontend-ingress
  namespace: gameday-workflow
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: workflow.learn.nrkk.technology
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gameday-workflow-frontend
            port:
              number: 3000
